--- a/Water_Environment/Web.config
+++ b/Water_Environment/Web.config
@@ -17,6 +17,7 @@
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
+		<!--<pages validateRequest="false" />-->
 		<authentication mode="Forms">
 			<forms loginUrl="~/Login" timeout="30" />
 		</authentication>
