--- a/Water_Environment/Web.config
+++ b/Water_Environment/Web.config
@@ -19,7 +19,7 @@
 		<httpRuntime targetFramework="4.7.2" />
 		<!--<pages validateRequest="false" />-->
 		<authentication mode="Forms">
-			<forms loginUrl="~/Login" timeout="30" />
+			<forms loginUrl="~/Login" />
 		</authentication>
 	</system.web>
 	<runtime>
@@ -73,5 +73,5 @@
 		<forms loginurl="Login"></forms>
 	</authentication>-->
 	<connectionStrings>
-	  <add name="Water_EnvironmentEntities" connectionString="metadata=res://*/Models.Entities.csdl|res://*/Models.Entities.ssdl|res://*/Models.Entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NU2K41LO\TAMNTM;initial catalog=Water_Environment;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+	   <add name="Water_EnvironmentEntities" connectionString="metadata=res://*/Models.Entities.csdl|res://*/Models.Entities.ssdl|res://*/Models.Entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NU2K41LO\TAMNTM;initial catalog=Water_Environment;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
