--- a/Water_Environment/Web.config
+++ b/Water_Environment/Web.config
@@ -13,6 +13,12 @@
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		<!--Cấu hình thanh toán vnpay-->
+		<add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
+		<add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
+		<add key="vnp_TmnCode" value="T2222UEJ"/>
+		<add key="vnp_HashSecret" value="QNAWJKAHCCOOMLTRCAZWCKGMIDRZCFAB"/>
+		<add key="vnp_Returnurl" value="https://localhost:44358/Donate/VnpayReturn"/>
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
@@ -73,5 +79,6 @@
 		<forms loginurl="Login"></forms>
 	</authentication>-->
 	<connectionStrings>
-	   <add name="Water_EnvironmentEntities" connectionString="metadata=res://*/Models.Entities.csdl|res://*/Models.Entities.ssdl|res://*/Models.Entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NU2K41LO\TAMNTM;initial catalog=Water_Environment;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+		<add name="Water_EnvironmentEntities" connectionString="metadata=res://*/Models.Entities.csdl|res://*/Models.Entities.ssdl|res://*/Models.Entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NU2K41LO\TAMNTM;initial catalog=Water_Environment;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 </configuration>
