--- a/Water_Environment/Water_Environment.csproj
+++ b/Water_Environment/Water_Environment.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Core\Extension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -311,6 +312,7 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Donate\Index.cshtml" />
     <Content Include="Views\Donate\VnpayReturn.cshtml" />
+    <Content Include="Views\Home\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
